@startuml

title __SECTION's Class Diagram__\n

  namespace org.block {
    namespace project.section {
      class org.block.project.section.BlockSection {
          - collection : Collection<String>
          - label : JLabel
          - type : BlockType<? extends Block>
          + BlockSection()
          + getBlock()
          + getBlockType()
          + getSectionsChildren()
          + getSectionsParent()
          + getTags()
          + getTitle()
          - init()
      }
    }
  }
  

  namespace org.block {
    namespace project.section {
      class org.block.project.section.BlockSection.BlockPanel {
          + BlockPanel()
          + getBlock()
          + paint()
          - init()
      }
    }
  }
  

  namespace org.block {
    namespace project.section {
      class org.block.project.section.BlockSection.OnClick {
          + mouseClicked()
          + mouseEntered()
          + mouseExited()
          + mousePressed()
          + mouseReleased()
      }
    }
  }
  

  namespace org.block {
    namespace project.section {
      interface org.block.project.section.GUISection {
          {abstract} + getSectionsChildren()
          {abstract} + getSectionsParent()
          {abstract} + getTags()
          {abstract} + getTitle()
      }
    }
  }
  

  namespace org.block {
    namespace project.section {
      class org.block.project.section.GroupedSection {
          # collection : Collection<String>
          # panel : JPanel
          # sections : List<GUISection>
          # text : JLabel
          + GroupedSection()
          + GroupedSection()
          + getSectionsChildren()
          + getSectionsParent()
          + getTags()
          + getTitle()
          + register()
          + unregister()
          - init()
          - updatePanel()
      }
    }
  }
  

  namespace org.block {
    namespace project.section {
      class org.block.project.section.GroupedSection.OnMouseClick {
          + mouseClicked()
          + mouseEntered()
          + mouseExited()
          + mousePressed()
          + mouseReleased()
      }
    }
  }
  

  namespace org.block {
    namespace project.section {
      class org.block.project.section.SpecificSection {
          + SpecificSection()
          + SpecificSection()
          + setTags()
          + setTitle()
          + unregisterAll()
      }
    }
  }
  

  org.block.project.section.BlockSection .up.|> org.block.project.section.GUISection
  org.block.project.section.BlockSection -up-|> javax.swing.JPanel
  org.block.project.section.BlockSection o-- org.block.project.section.BlockSection.BlockPanel : panel
  org.block.project.section.BlockSection o-- org.block.project.section.GUISection : parent
  org.block.project.section.BlockSection +-down- org.block.project.section.BlockSection.BlockPanel
  org.block.project.section.BlockSection +-down- org.block.project.section.BlockSection.OnClick
  org.block.project.section.BlockSection.BlockPanel -up-|> javax.swing.JPanel
  org.block.project.section.BlockSection.BlockPanel o-- org.block.project.block.Block : block
  org.block.project.section.BlockSection.OnClick .up.|> java.awt.event.MouseListener
  org.block.project.section.GroupedSection .up.|> org.block.project.section.GUISection
  org.block.project.section.GroupedSection -up-|> javax.swing.JPanel
  org.block.project.section.GroupedSection o-- org.block.project.section.GUISection : parent
  org.block.project.section.GroupedSection +-down- org.block.project.section.GroupedSection.OnMouseClick
  org.block.project.section.GroupedSection.OnMouseClick .up.|> java.awt.event.MouseListener
  org.block.project.section.SpecificSection -up-|> org.block.project.section.GroupedSection


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
